<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?android:attr/colorForeground"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorForeground"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_blue3"
            android:text="@string/introduce"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_blue3"
            android:text="@string/license"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_legal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg_blue3"
            android:text="@string/legal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0"
            android:background="@drawable/btn_bg_blue3"
            android:text="@string/update"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <TextView
        android:id="@+id/about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="?android:attr/colorBackground" />

    <ScrollView
        android:id="@+id/scrollview_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/about_info"
            android:background="?android:attr/colorForeground"
            android:textColor="?android:attr/colorBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/about" />

    </ScrollView>

</LinearLayout>